maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:33: error: value setIndication is not a member of Int
possible cause: maybe a semicolon is missing before `value setIndication'?
      setIndication(x,y+1,m))
      ^